# ferra

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.agent  README.md
agent/: Cargo.toml  README.md
agent/src/: api.rs  cache.rs  config.rs  lib.rs  main.rs  sse.rs  upstream.rs  watch.rs
agent/tests/: integration.rs
deploy/docker-compose/: docker-compose.yml
deploy/kubernetes/: 00-namespace.yaml  20-postgres.yaml  30-ferra-server.yaml  35-network-policy.yaml  40-example-consumer-with-sidecar.yaml  README.md
docs/: api.md
meta/: Cargo.toml  README.md
meta/src/: main.rs
server/: Cargo.toml  README.md
server/migrations/: 0001_init.sql
server/src/: config.rs  db.rs  error.rs  events.rs  lib.rs  listener.rs  main.rs  state.rs
server/src/api/: events.rs  health.rs  kv.rs  mod.rs  watch.rs
server/tests/: api_events.rs  api_health.rs  api_kv.rs  api_watch.rs
server/tests/common/: mod.rs
