[workspace]
resolver = "2"
members = ["server", "agent", "meta"]

[workspace.package]
# Note: `version` is declared per-crate, not in workspace.package, so each
# crate can ship independent releases. server / agent / meta evolve at
# different paces — a bug fix in the server should not force a phantom
# release of the agent.
edition = "2021"
license = "MIT"
repository = "https://github.com/deatherving/ferra"
homepage = "https://github.com/deatherving/ferra"
rust-version = "1.75"
authors = ["Li Zhou <ervingzhou@gmail.com>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures = "0.3"
tokio-stream = "0.1"
