[package]
name = "ferra-agent"
description = "Sidecar agent for Ferra: holds an in-memory cache + SSE watch and exposes a localhost HTTP API to nearby service containers"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["configuration", "config", "kv-store", "ferra", "sidecar"]
categories = ["command-line-utilities", "config", "web-programming::http-server"]

[[bin]]
name = "ferra-agent"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
tokio-stream.workspace = true

axum = "0.7"
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
bytes = "1"
humantime = "2"

[dev-dependencies]
serial_test = "3"
wiremock = "0.6"
http-body-util = "0.1"
