[package]
name = "ferra-server"
description = "HTTP + SSE configuration server for Ferra, a lightweight Postgres-backed configuration center"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["configuration", "config", "kv-store", "ferra", "postgres"]
categories = ["web-programming::http-server", "config", "database"]

[[bin]]
name = "ferra-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
futures.workspace = true
tokio-stream.workspace = true

axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "chrono",
    "macros",
    "migrate",
] }
async-stream = "0.3"
async-trait = "0.1"

# AWS SDK — used only when FERRA_DATABASE_IAM_AUTH_ENABLED=true at runtime.
# Adds compile time and binary size, but keeps the deploy story uniform
# (one binary supports both classic password auth and RDS/Aurora IAM auth).
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-rds = "1"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serial_test = "3"
http-body-util = "0.1"
bytes = "1"
